--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "fp"
   ],
   "author": "elcoosp",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "jest": "^22.4.3"
+  }
 }
