--- a/package.json
+++ b/package.json
@@ -4,15 +4,11 @@
   "description": "A tiny utility to fetch then pipe",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll",
+    "test:watch": "jest --watchAll",
+    "test:coverage": "jest --coverage",
     "dev": "nodemon ./src/index.js"
   },
-  "keywords": [
-    "js",
-    "fetch",
-    "pipe",
-    "fp"
-  ],
+  "keywords": ["js", "fetch", "pipe", "fp"],
   "author": "elcoosp",
   "license": "MIT",
   "devDependencies": {
