--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pipetch",
   "version": "1.0.0",
   "description": "A tiny utility to fetch then pipe",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --coverage",
